2018-05-29  Caio Lima  <ticaiolima@gmail.com>

        [ESNext][BigInt] Implement support for "<" and ">" relational operation
        https://bugs.webkit.org/show_bug.cgi?id=185379

        Reviewed by Yusuke Suzuki.

        * stress/big-int-greater-than-general.js: Added.
        * stress/big-int-greater-than-jit.js: Added.
        * stress/big-int-greater-than-order-of-evaluation.js: Added.
        * stress/big-int-greater-than-wrapped-values.js: Added.
        * stress/big-int-less-than-general.js: Added.
        * stress/big-int-less-than-jit.js: Added.
        * stress/big-int-less-than-order-of-evaluation.js: Added.
        * stress/big-int-less-than-wrapped-values.js: Added.

2018-05-29  Caitlin Potter  <caitp@igalia.com>

        [JSC] Fix Array.prototype.concat fast case when single argument is Proxy
        https://bugs.webkit.org/show_bug.cgi?id=184267

        Reviewed by Saam Barati.

        * stress/array-concat-fast-spread-proxy.js: Copied from JSTests/stress/array-concat-spread-proxy.js.
        (arrayEq):
        (catch):
        * stress/array-concat-spread-proxy.js:

2018-05-27  Caio Lima  <ticaiolima@gmail.com>

        [ESNext][BigInt] Implement "+" and "-" unary operation
        https://bugs.webkit.org/show_bug.cgi?id=182214

        Reviewed by Yusuke Suzuki.

        * stress/big-int-negate-basic.js: Added.
        * stress/big-int-negate-jit.js: Added.
        * stress/big-int-unary-plus.js: Added.

2018-05-26  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Rename Array#flatten to flat
        https://bugs.webkit.org/show_bug.cgi?id=186012

        Reviewed by Saam Barati.

        * stress/array-flatten.js:
        (shouldThrow):
        * test262/expectations.yaml:

2018-05-23  Yusuke Suzuki  <utatane.tea@gmail.com>

        Upgrade test262 to May 24 version
        https://bugs.webkit.org/show_bug.cgi?id=185937

        Reviewed by Darin Adler.

        * test262/expectations.yaml:
        * test262/harness/doneprintHandle.js: