@@ -1,3 +1,12 @@
+2018-05-29  Caitlin Potter  <caitp@igalia.com>
+
+        [JSTests] update test262 expectations after r232261
+        https://bugs.webkit.org/show_bug.cgi?id=184267
+
+        Reviewed by Saam Barati.
+
+        * test262/expectations.yaml:
+
 2018-05-29  Caio Lima  <ticaiolima@gmail.com>
 
         [ESNext][BigInt] Implement support for "<" and ">" relational operation
